force-app/main/default/objects/UsageSignal__c/UsageSignal__c.object-meta.xml
<CustomObject>
    <description>Aggregated usage metrics captured during scans.</description>
    <label>Usage Signal</label>
    <nameField>
        <displayFormat>US-{000000}</displayFormat>
        <label>Usage Signal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>