force-app/main/default/objects/UsageSignal__c/fields/FieldInventory__c.field-meta.xml
<CustomField>
    <fullName>FieldInventory__c</fullName>
    <label>Field Inventory</label>
    <referenceTo>FieldInventory__c</referenceTo>
    <relationshipName>UsageSignals</relationshipName>
    <type>Lookup</type>
</CustomField>