force-app/main/default/objects/UsageSignal__c/fields/IsOnLayout__c.field-meta.xml
<CustomField>
    <fullName>IsOnLayout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Layout</label>
    <type>Checkbox</type>
</CustomField>