force-app/main/default/objects/UsageSignal__c/fields/LastObservedOn__c.field-meta.xml
<CustomField>
    <fullName>LastObservedOn__c</fullName>
    <label>Last Observed On</label>
    <type>DateTime</type>
</CustomField>