force-app/main/default/objects/UsageSignal__c/fields/NonNullCount__c.field-meta.xml
<CustomField>
    <fullName>NonNullCount__c</fullName>
    <label>Non-Null Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>