force-app/main/default/objects/UsageSignal__c/fields/NullRatePct__c.field-meta.xml
<CustomField>
    <fullName>NullRatePct__c</fullName>
    <label>Null Rate %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>