force-app/main/default/objects/UsageSignal__c/fields/SampleSize__c.field-meta.xml
<CustomField>
    <fullName>SampleSize__c</fullName>
    <label>Sample Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>